samples/_failures_safe/1761668058_22690a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93eb0b47.c: In function ‘main’:
./samples/SAFE/__tmp_93eb0b47.c:152:16: error: missing terminating " character
  152 |         printf("
      |                ^
./samples/SAFE/__tmp_93eb0b47.c:152:9: error: expected expression at end of input
  152 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_93eb0b47.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_93eb0b47.c:152:9: error: expected declaration or statement at end of input
